--- a/chaibucks.html
+++ b/chaibucks.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: ##808000
+            color: #636b2f;
         }
 
         header {
@@ -22,7 +22,7 @@
         }
 
         nav {
-            background-color: #5a3b2b;
+            background-color: ##808000;
             display: flex;
             justify-content: center;
             padding: 10px;
@@ -47,7 +47,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #fff;
+            color: #;	#008000
+         
             text-align: center;
             font-size: 2rem;
         }
@@ -145,6 +146,17 @@
             <a href="#" style="color: #ffdd57;">Twitter</a>
         </p>
     </footer>
+
+</body>
+</html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
